--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>Petra Nešić - Sports Graphic Designer | @petragfx</title>
-    <meta name="title" content="Petra Nešić - Sports Graphic Designer | @petragfx" />
-    <meta name="description" content="Professional sports graphics designer specializing in football, basketball, and tennis. Creating explosive visual content for teams and athletes." />
+    <title>11NY - Social Media Agency | @eleveny.agency</title>
+    <meta name="title" content="11NY - Social Media Agency | @eleveny.agency" />
+    <meta name="description" content="Your game hits different when we're on your side. Strategic social media agency that converts followers into loyal fans." />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
